k8-manifests/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: driveopssurya/nodejs-app:236fb022387bbfb19b5c3080b22903e92dec4381
        ports:
        - containerPort: 5000
